# ADV

./: README.md
MultiThreadedWebServer/: CMakeLists.txt  README.md  client.cpp  config.json  main.cpp  server.cpp  server.hpp  thread_pool.cpp
MultiThreadedWebServer/include/: server.hpp  thread_pool.hpp
MultiThreadedWebServer/www/: 404.html  500.html  good.html  index.html  style.css
design pattern/: 2 Design Patterns-STU.html  BubbleSort.cpp  BubbleSort.hpp  CIrcle.cpp  CMakeLists.txt  Circle.hpp  ConcreteObserver.hpp  ConfigManager.cpp  ConfigManager.hpp  Directory.cpp  Directory.hpp  Event.hpp  File.cpp  File.hpp  IFileSystemItem.hpp  IObserver.hpp  IShape.hpp  ISortStrategy.hpp  QuickSort.cpp  QuickSort.hpp  ShapeFactory.cpp  ShapeFactory.hpp  SortContext.hpp  Square.cpp  Square.hpp  Subject.hpp  main.cpp
optiAndPerf/: CMakeLists.txt  astar.cpp  main.cpp
template/: CMakeLists.txt  main.cpp
